--- a/src/index.scss
+++ b/src/index.scss
@@ -75,7 +75,7 @@ header {
 }
 .home-container {
   background-image: url('./images/home.jpg');
-  height: 700px;
+  min-height: 100vh;
   background-size: cover;
   padding-top: 60px;
   border-bottom: 1px solid #e8e8e8;
