Cart Product with chakra-ui/recat

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&subset=latin-ext');
 
-$primary-color: #86BC42;
+/* $primary-color: #86BC42;
 $text-color: #49575F;
 $font-family: 'Lato', sans-serif;
 
@@ -111,4 +111,4 @@ header {
   color: red;
   margin-left: auto;
   margin-right: auto;
-}
+} */
