--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&subset=latin-ext');
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
 
 /* $primary-color: #86BC42;
 $text-color: #49575F;
